# sfcg

./: .gitignore  README.rst  main.py  pyproject.toml
tests/: test_sfcg.py
