[tool.poetry]
name = "sfcg"
version = "0.1.0"
description = ""
authors = ["Andriy Mykhaylyk <erp.lsf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
steam = {extras = ["client"], version = "^1.2.0"}
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
